# Green-IDC-Optimizer

./: .dockerignore  .editorconfig  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  main.py  pyproject.toml
.github/: pull_request_template.md
apps/api/: main.py
apps/control_service/: main.py
apps/dashboard/: Dockerfile  api_client.py  app.py  charts.py  constants.py  playback.py  sidebar.py  simulation.py  styles.py
apps/dashboard/pages/: 0_대시보드.py  1_운영_관리.py  2_ESG_지표.py  3_분석_도구.py  4_RL_vs_Rulebased.py
apps/forecast_service/: main.py
apps/simulation_service/: main.py  pid_simulator.py  sinergym_validator.py  test_sinergym.py  thermal_simulator.py
core/config/: constants.py  enums.py  settings.py
core/schemas/: control.py  forecast.py  rl_interface.py  simulation.py
data/: add_noise_to_synthetic.py  data_pipeline.py  spec.ipynb  weather.ipynb
data/models/: sac-dr-fresh-1m_vecnorm.pkl  sac-wetbulb-1m_vecnorm.pkl
data/weather/: KOR_Seoul.ddy  KOR_Seoul.epw
docker/: api.Dockerfile  control.Dockerfile  dashboard.Dockerfile  forecast.Dockerfile  rl.Dockerfile  simulation.Dockerfile
docs/: RUNBOOK.md  api_spec.md  architecture.md  controller_comparison.md  dashboard_design.md  pid_tuning.md  ppo_idc_comparison.md  td3_idc_comparison.md  thermodynamic_model.md
domain/controllers/: idc_env.py  pid.py  rl_agent.py  rl_env.py  rl_inference.py  rule_based.py
domain/forecasting/: intervals.py  lgbm_model.py  lstm_model.py  moving_avg.py
domain/thermodynamics/: Readme.md  chiller.py  cooling_load.py  free_cooling.py  it_power.py  pue.py
scripts/: check_action.py  eval_baseline.py  eval_crisis.py  eval_forecast_metrics.py  eval_rl.py  setup_gpu_server.sh  test_rl_env.py  train_multiseed.py
(+20 files in other folders)
